Disabled retry logic on callback method Added exponential backoff to netmera api

--- a/netmera4j/build.gradle
+++ b/netmera4j/build.gradle
@@ -35,4 +35,6 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+
+    compile 'net.jodah:failsafe:2.3.1'
 }
