--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
             <artifactId>failsafe</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
