--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,7 @@ notifications:
 branches:
   only:
     - master
+
+env:
+  global:
+    - secure: nMIGJAoGBALeFvpaS4szqW9jo3uH3kaS2YJZSyghvokomKuiPIBr8mnO6BNm6C5sJ\nDKX7ihhJdKUA/MpEFCiObj5ZPiXcV7gHlyVN2FCP5ucFLHtasa3j6nCH5lvdLxAw\nAbPKq8PPCq8rurmFWBLuuCWXR0VW2OG1+Oo4b9U1d5ywST7hpvOrAgMBAAE=
