--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,8 @@ env:
 
 install:
   - mvn install -DskipTests=true -Dgpg.skip=true -Dmaven.javadoc.skip=true -B -V
+
+script: "mvn cobertura:cobertura"
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
